--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <h3 class="newsletter-title">PESAN SEKARANG VIA WHATSAPP!</h3>
     <p class="newsletter-subtitle">Langsung hubungi kami untuk order Sapphire Latte</p>
     <div class="newsletter-form">
-      <a href="https://wa.me/6281234567890?text=Halo%20saya%20ingin%20pesan%20Sapphire%20Latte" 
+      <a href="https://chat.whatsapp.com/J8TdUqmAO4H7uwUGplEsZk?mode=ac_t" 
          target="_blank" 
          class="subscribe-btn">
         📲 Pesan via WA
