fix layering on hero section and changing some caption

--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
       </div>
       <div class="benefits-text">
         <h2 class="benefits-title">
-          BENEFIT ✨<br>
-          OF ORGANIC<br>
-          ENERGY DRINK
+          MANFAAT ✨<br>
+          DARI MINUMAN<br>
+          SAPPHIRE LATTE
         </h2>
         <p class="benefits-description">
-          Billions of dollars are spent every single year on beverages that claim to increase physical energy and boost brainpower.
+          Bukan sekadar menambah tenaga, tapi juga menjaga kesehatan.
         </p>
         <p class="benefits-description">
-          Collectively known as energy drinks, these popular beverages are the go-to choice for those looking to enhance their physical and mental performance.
+          Bunga Telang dan kopi pilihan memberi kombinasi alami untuk meningkatkan energi, memperbaiki mood, sekaligus melindungi tubuh dengan antioksidan.
         </p>
       </div>
     </div>
@@ -141,7 +141,7 @@
   <!-- Products Section -->
   <section class="products" id="products">
     <h2 class="products-title">GET YOUR ENERGY BOOSTED NOW!</h2>
-    <p class="products-subtitle">We ship worldwide with best quality service</p>
+    <p class="products-subtitle">Kami Menyajikan Dengan Pelayanan Terbaik</p>
     
     <div class="products-grid">
       
