gimik harga produk

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
           BUNGA TELANG<br>
           JADI SATU
         </h1>
-        <div class="price">Rp18.000</div>
+        <div class="price-container">
+          <div class="original-price">Rp18.000</div>
+          <div class="current-price">Rp15.000</div>
+          <div class="discount-tag">DISKON 17%</div>
+        </div>
         <p class="hero-description">
           Fresh Coffee from local farmer blended with high
           quality Butterfly Pea Flower with high antioxidant
@@ -154,8 +158,12 @@
         <h3 class="product-name">ORIGINAL</h3>
         <p class="product-size">12 FL OZ / 354 g</p>
         <p class="product-desc">Fresh Sapphire Latte with local farmer</p>
-        <div class="product-footer">
-          <span class="product-price">Rp18.000</span>
+       <div class="product-footer">
+          <div class="price-container">
+            <div class="original-price">Rp18.000</div>
+            <div class="current-price">Rp15.000</div>
+            <div class="discount-tag">17% OFF</div>
+          </div>
         </div>
       </div>
     </div>
