newsletter section-updating link for PO

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
   <!-- Newsletter Section -->
   <section class="newsletter">
-    <h3 class="newsletter-title">PESAN SEKARANG VIA WHATSAPP!</h3>
-    <p class="newsletter-subtitle">Langsung hubungi kami untuk order Sapphire Latte</p>
+    <h3 class="newsletter-title">PESAN SEKARANG</h3>
+    <p class="newsletter-subtitle">Langsung klik tombol di bawah untuk order Sapphire Latte</p>
     <div class="newsletter-form">
-      <a href="https://chat.whatsapp.com/J8TdUqmAO4H7uwUGplEsZk?mode=ac_t" 
+      <a href="https://forms.gle/1FhLfi2Ga49tFv3i6" 
          target="_blank" 
          class="subscribe-btn">
-        📲 Pesan via WA
+        📲 Pesan
       </a>
     </div>
   </section>
