delete stats section, add review section, update icon & logo section

--- a/index.html
+++ b/index.html
@@ -1,204 +1,279 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sapphire Latte - Premium Coffee with Butterfly Pea Flower</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <nav class="nav">
-      <div class="logo">
-        <span class="logo-text">SAPPHIRE</span>
-        <span class="logo-sub">LATTE</span>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#products">Products</a></li>
-        <li><a href="#benefits">Manfaat</a></li>
-        <li><a href="#about">About Us</a></li>
-      </ul>
-      <div class="nav-icons">
-        <button class="menu-btn">☰</button>
-      </div>
-    </nav>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero" id="home">
-    <div class="hero-content">
-      <div class="hero-text">
-        <div class="product-tag">BUNGA TELANG ✨</div>
-        <h1 class="hero-title">
-          KOPI PREMIUM &<br>
-          BUNGA TELANG<br>
-          JADI SATU
-        </h1>
-        <div class="price-container">
-          <div class="original-price">Rp18.000</div>
-          <div class="current-price">Rp15.000</div>
-          <div class="discount-tag">DISKON 17%</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sapphire Latte - Premium Coffee with Butterfly Pea Flower</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" href="img/Logo1.png">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <nav class="nav">
+        <div class="logo">
+          <img src="img/Logo2.png" alt="Sapphire Latte Logo" class="logo-img">
         </div>
-        <p class="hero-description">
-          Fresh Coffee from local farmer blended with high
-          quality Butterfly Pea Flower with high antioxidant
-          quality of welcome
-        </p>
-        <!-- <div class="hero-actions">
-          <button class="see-variants">See all variants →</button>
-        </div> -->
-      </div>
-      <div class="hero-image">
-        <div class="discount-badges">
-          <div class="badge yellow">50% Natural</div>
-          <div class="badge red">25% Antioxidant</div>
-          <div class="badge black">25% Caffeine</div>
+        <ul class="nav-links">
+          <li><a href="#products">Produk</a></li>
+          <li><a href="#benefits">Manfaat</a></li>
+          <li><a href="#review">Review</a></li>
+          <li><a href="#pesan">Pesan</a></li>
+        </ul>
+        <div class="nav-icons">
+          <button class="menu-btn">☰</button>
         </div>
-        <img src="img/placeholder.png" alt="Sapphire Latte Product" class="product-image">
-        <!-- <div class="navigation-arrows">
-          <button class="nav-arrow left">‹</button>
-          <button class="nav-arrow right">›</button>
-        </div> -->
-      </div>
-    </div>
-  </section>
+      </nav>
+    </header>
 
-  <!-- Scrolling Text -->
-  <div class="scrolling-text">
-    <div class="scroll-content">
-      <span>⚡</span>
-      <span>CALMLY ENERGIZE</span>
-      <span>⚡</span>
-      <span>CALMLY ENERGIZE</span>
-      <span>⚡</span>
-      <span>CALMLY ENERGIZE</span>
-      <span>⚡</span>
-      <span>CALMLY ENERGIZE</span>
-      <span>⚡</span>
-    </div>
-  </div>
-
-  <!-- Brand Values Section -->
-  <section class="brand-values" id="benefits">
-    <h2 class="section-title">OUR BRAND VALUE</h2>
-    <div class="values-grid">
-      <div class="value-item">
-        <div class="value-icon">💜</div>
-        <h3>PURE</h3>
-        <p>We use selected ingredients that are sourced for quality</p>
-      </div>
-      <div class="value-item">
-        <div class="value-icon">😊</div>
-        <h3>GOODNESS</h3>
-        <p>Our goal is not just to make product that taste good but one great impact a better society</p>
-      </div>
-      <div class="value-item">
-        <div class="value-icon">💪</div>
-        <h3>ACTIVE</h3>
-        <p>We want to support people that love to move actively, live healthier lifestyle and share via activities</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Benefits Section -->
-  <section class="benefits">
-    <div class="benefits-content">
-      <div class="benefits-image">
-       <img src="img/placeholder2.png" alt="Active Lifestyle" class="lifestyle-image">
-      </div>
-      <div class="benefits-text">
-        <h2 class="benefits-title">
-          MANFAAT ✨<br>
-          DARI MINUMAN<br>
-          SAPPHIRE LATTE
-        </h2>
-        <p class="benefits-description">
-          Bukan sekadar menambah tenaga, tapi juga menjaga kesehatan.
-        </p>
-        <p class="benefits-description">
-          Bunga Telang dan kopi pilihan memberi kombinasi alami untuk meningkatkan energi, memperbaiki mood, sekaligus melindungi tubuh dengan antioksidan.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Stats Section -->
-  <section class="stats">
-    <div class="stats-grid">
-      <div class="stat-item">
-        <div class="stat-number">10K+</div>
-        <div class="stat-label">Product sold</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-number">100+</div>
-        <div class="stat-label">Distribution Store</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-number">9</div>
-        <div class="stat-label">Product Awards</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Products Section -->
-  <section class="products" id="products">
-    <h2 class="products-title">GET YOUR ENERGY BOOSTED NOW!</h2>
-    <p class="products-subtitle">Kami Menyajikan Dengan Pelayanan Terbaik</p>
-    
-    <div class="products-grid">
-      
-
-      <div class="product-card">
-        <div class="product-image-container">
-          <img src="img/placeholder3.png" alt="Original Blend" class="product-img">
-          <div class="product-badge">💜</div>
-        </div>
-        <h3 class="product-name">ORIGINAL</h3>
-        <p class="product-size">12 FL OZ / 354 g</p>
-        <p class="product-desc">Fresh Sapphire Latte with local farmer</p>
-       <div class="product-footer">
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+      <div class="hero-content">
+        <div class="hero-text">
+          <div class="product-tag">BUNGA TELANG ✨</div>
+          <h1 class="hero-title">
+            KOPI PREMIUM &<br />
+            BUNGA TELANG<br />
+            JADI SATU
+          </h1>
           <div class="price-container">
             <div class="original-price">Rp18.000</div>
             <div class="current-price">Rp15.000</div>
-            <div class="discount-tag">17% OFF</div>
+            <div class="discount-tag">DISKON 17%</div>
+          </div>
+          <p class="hero-description">
+            Fresh Coffee from local farmer blended with high quality Butterfly
+            Pea Flower with high antioxidant quality of welcome
+          </p>
+          <!-- <div class="hero-actions">
+          <button class="see-variants">See all variants →</button>
+        </div> -->
+        </div>
+        <div class="hero-image">
+          <div class="discount-badges">
+            <div class="badge yellow">50% Natural</div>
+            <div class="badge red">25% Antioxidant</div>
+            <div class="badge black">25% Caffeine</div>
+          </div>
+          <img
+            src="img/placeholder.png"
+            alt="Sapphire Latte Product"
+            class="product-image"
+          />
+          <!-- <div class="navigation-arrows">
+          <button class="nav-arrow left">‹</button>
+          <button class="nav-arrow right">›</button>
+        </div> -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Scrolling Text -->
+    <div class="scrolling-text">
+      <div class="scroll-content">
+        <span>⚡</span>
+        <span>CALMLY ENERGIZE</span>
+        <span>⚡</span>
+        <span>CALMLY ENERGIZE</span>
+        <span>⚡</span>
+        <span>CALMLY ENERGIZE</span>
+        <span>⚡</span>
+        <span>CALMLY ENERGIZE</span>
+        <span>⚡</span>
+      </div>
+    </div>
+
+    <!-- Brand Values Section -->
+    <section class="brand-values" id="benefits">
+      <h2 class="section-title">OUR BRAND VALUE</h2>
+      <div class="values-grid">
+        <div class="value-item">
+          <div class="value-icon">💜</div>
+          <h3>PURE</h3>
+          <p>We use selected ingredients that are sourced for quality</p>
+        </div>
+        <div class="value-item">
+          <div class="value-icon">😊</div>
+          <h3>GOODNESS</h3>
+          <p>
+            Our goal is not just to make product that taste good but one great
+            impact a better society
+          </p>
+        </div>
+        <div class="value-item">
+          <div class="value-icon">💪</div>
+          <h3>ACTIVE</h3>
+          <p>
+            We want to support people that love to move actively, live healthier
+            lifestyle and share via activities
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Benefits Section -->
+    <section class="benefits">
+      <div class="benefits-content">
+        <div class="benefits-image">
+          <img
+            src="img/placeholder2.png"
+            alt="Active Lifestyle"
+            class="lifestyle-image"
+          />
+        </div>
+        <div class="benefits-text">
+          <h2 class="benefits-title">
+            MANFAAT ✨<br />
+            DARI MINUMAN<br />
+            SAPPHIRE LATTE
+          </h2>
+          <p class="benefits-description">
+            Bukan sekadar menambah tenaga, tapi juga menjaga kesehatan.
+          </p>
+          <p class="benefits-description">
+            Bunga Telang dan kopi pilihan memberi kombinasi alami untuk
+            meningkatkan energi, memperbaiki mood, sekaligus melindungi tubuh
+            dengan antioksidan.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products" id="products">
+      <h2 class="products-title">GET YOUR ENERGY BOOSTED NOW!</h2>
+      <p class="products-subtitle">Kami Menyajikan Dengan Pelayanan Terbaik</p>
+
+      <div class="products-grid">
+        <div class="product-card">
+          <div class="product-image-container">
+            <img
+              src="img/placeholder3.png"
+              alt="Original Blend"
+              class="product-img"
+            />
+            <div class="product-badge">💜</div>
+          </div>
+          <h3 class="product-name">ORIGINAL</h3>
+          <p class="product-size">16 FL OZ</p>
+          <p class="product-desc">Fresh Sapphire Latte with local farmer</p>
+          <div class="product-footer">
+            <div class="price-container">
+              <div class="original-price">Rp18.000</div>
+              <div class="current-price">Rp15.000</div>
+              <div class="discount-tag">17% OFF</div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- CTA Section -->
-  <section class="cta">
-    <h2 class="cta-title">
-      Ready to Experience<br>
-      the Perfect Latte?
-    </h2>
-  </section>
+    <!-- Reviews Section -->
+    <section class="reviews" id="review">
+      <div class="reviews-container">
+        <h2 class="reviews-title">APA KATA MEREKA?</h2>
+        <div class="reviews-grid">
+          <div class="review-card">
+            <div class="review-avatar">
+              <img
+                src="https://via.placeholder.com/60x60/8B5CF6/FFFFFF?text=A"
+                alt="Avatar"
+                class="avatar-img"
+              />
+            </div>
+            <div class="review-content">
+              <p class="review-text">
+                "Rasanya unik banget! Campuran kopi dengan bunga telang bikin
+                energi lebih stabil, ga bikin jantung berdebar kayak kopi
+                biasa."
+              </p>
+              <div class="review-author">
+                <span class="author-name">Anisa R.</span>
+                <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
+              </div>
+            </div>
+          </div>
 
-  <!-- Newsletter Section -->
-  <section class="newsletter">
-    <h3 class="newsletter-title">PESAN SEKARANG</h3>
-    <p class="newsletter-subtitle">Langsung klik tombol di bawah untuk order Sapphire Latte</p>
-    <div class="newsletter-form">
-      <a href="https://forms.gle/1FhLfi2Ga49tFv3i6" 
-         target="_blank" 
-         class="subscribe-btn">
-        📲 Pesan
-      </a>
-    </div>
-  </section>
+          <div class="review-card">
+            <div class="review-avatar">
+              <img
+                src="img/Review.jpg"
+                alt="Avatar"
+                class="avatar-img"
+              />
+            </div>
+            <div class="review-content">
+              <p class="review-text">
+                "Rasanya fresh banget, beda dari kopi lain yang pernah aku coba."
+              </p>
+              <div class="review-author">
+                <span class="author-name">Dimsuy</span>
+                <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
+              </div>
+            </div>
+          </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-links">
-      <a href="#home">Home</a>
-      <a href="#products">Products</a>
-      <a href="#benefits">Manfaat</a>
-      <a href="#about">About Us</a>
-    </div>
-  </footer>
-  <script src="script.js"></script>
-</body>
+          <div class="review-card">
+            <div class="review-avatar">
+              <img
+                src="https://via.placeholder.com/60x60/9333EA/FFFFFF?text=C"
+                alt="Avatar"
+                class="avatar-img"
+              />
+            </div>
+            <div class="review-content">
+              <p class="review-text">
+                "Udah jadi minuman favorit aku setiap pagi. Selain enak, katanya
+                juga bagus buat kesehatan karena antioksidannya tinggi."
+              </p>
+              <div class="review-author">
+                <span class="author-name">Citra M.</span>
+                <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta">
+      <h2 class="cta-title">
+        Ready to Experience<br />
+        the Perfect Latte?
+      </h2>
+    </section>
+
+    <!-- Newsletter Section -->
+    <section class="newsletter" id="pesan">
+      <h3 class="newsletter-title">PESAN SEKARANG</h3>
+      <p class="newsletter-subtitle">
+        Langsung klik tombol di bawah untuk order Sapphire Latte
+      </p>
+      <div class="newsletter-form">
+        <a
+          href="https://forms.gle/1FhLfi2Ga49tFv3i6"
+          target="_blank"
+          class="subscribe-btn"
+        >
+          📲 Pesan
+        </a>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-links">
+        <a href="#products">Produk</a>
+        <a href="#benefits">Manfaat</a>
+        <a href="#review">Review</a>
+        <a href="#pesan">Pesan</a>
+      </div>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
