--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sapphire Latte - Premium Coffee with Butterfly Pea Flower</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" href="img/Logo1.png">
+    <link rel="icon" type="image/png" href="img/Logo1.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
@@ -16,7 +20,7 @@
     <header class="header">
       <nav class="nav">
         <div class="logo">
-          <img src="img/Logo2.png" alt="Sapphire Latte Logo" class="logo-img">
+          <img src="img/Logo2.png" alt="Sapphire Latte Logo" class="logo-img" />
         </div>
         <ul class="nav-links">
           <li><a href="#products">Produk</a></li>
@@ -60,7 +64,7 @@
             <div class="badge black">25% Caffeine</div>
           </div>
           <img
-            src="img/placeholder.png"
+            src="img/produk1.png"
             alt="Sapphire Latte Product"
             class="product-image"
           />
@@ -89,27 +93,30 @@
 
     <!-- Brand Values Section -->
     <section class="brand-values" id="benefits">
-      <h2 class="section-title">OUR BRAND VALUE</h2>
+      <h2 class="section-title">VALUE KITA</h2>
       <div class="values-grid">
         <div class="value-item">
           <div class="value-icon">💜</div>
           <h3>PURE</h3>
-          <p>We use selected ingredients that are sourced for quality</p>
+          <p>
+            Kita selalu pilih bahan-bahan yang berkualitas, biar hasilnya tetap
+            clean dan asli.
+          </p>
         </div>
         <div class="value-item">
           <div class="value-icon">😊</div>
           <h3>GOODNESS</h3>
           <p>
-            Our goal is not just to make product that taste good but one great
-            impact a better society
+            Nggak cuma enak di lidah, tapi juga bawa vibes positif dan berdampak
+            baik buat sekitar.
           </p>
         </div>
         <div class="value-item">
           <div class="value-icon">💪</div>
           <h3>ACTIVE</h3>
           <p>
-            We want to support people that love to move actively, live healthier
-            lifestyle and share via activities
+            Cocok buat lo yang suka aktif, hidup sehat, dan pengen share energy
+            positif lewat kegiatan sehari-hari.
           </p>
         </div>
       </div>
@@ -120,7 +127,7 @@
       <div class="benefits-content">
         <div class="benefits-image">
           <img
-            src="img/placeholder2.png"
+            src="img/produk2.png"
             alt="Active Lifestyle"
             class="lifestyle-image"
           />
@@ -152,11 +159,11 @@
         <div class="product-card">
           <div class="product-image-container">
             <img
-              src="img/placeholder3.png"
+              src="img/produk3-1.png"
               alt="Original Blend"
               class="product-img"
             />
-            <div class="product-badge">💜</div>
+            <!-- <div class="product-badge">💜</div> -->
           </div>
           <h3 class="product-name">ORIGINAL</h3>
           <p class="product-size">16 FL OZ</p>
@@ -179,20 +186,15 @@
         <div class="reviews-grid">
           <div class="review-card">
             <div class="review-avatar">
-              <img
-                src="https://via.placeholder.com/60x60/8B5CF6/FFFFFF?text=A"
-                alt="Avatar"
-                class="avatar-img"
-              />
+              <img src="img/Review2.jpg" alt="Avatar" class="avatar-img" />
             </div>
             <div class="review-content">
               <p class="review-text">
-                "Rasanya unik banget! Campuran kopi dengan bunga telang bikin
-                energi lebih stabil, ga bikin jantung berdebar kayak kopi
-                biasa."
+                "Belum dapet kalimat reviewnya guys, bentar lagi kalo dapet tek
+                taruh sini"
               </p>
               <div class="review-author">
-                <span class="author-name">Anisa R.</span>
+                <span class="author-name">Lorem</span>
                 <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
               </div>
             </div>
@@ -200,15 +202,12 @@
 
           <div class="review-card">
             <div class="review-avatar">
-              <img
-                src="img/Review.jpg"
-                alt="Avatar"
-                class="avatar-img"
-              />
+              <img src="img/Review.jpg" alt="Avatar" class="avatar-img" />
             </div>
             <div class="review-content">
               <p class="review-text">
-                "Rasanya fresh banget, beda dari kopi lain yang pernah aku coba."
+                "Rasanya fresh banget, beda dari kopi lain yang pernah aku
+                coba."
               </p>
               <div class="review-author">
                 <span class="author-name">Dimsuy</span>
@@ -219,19 +218,15 @@
 
           <div class="review-card">
             <div class="review-avatar">
-              <img
-                src="https://via.placeholder.com/60x60/9333EA/FFFFFF?text=C"
-                alt="Avatar"
-                class="avatar-img"
-              />
+              <img src="img/Review3.jpg" alt="Avatar" class="avatar-img" />
             </div>
             <div class="review-content">
               <p class="review-text">
-                "Udah jadi minuman favorit aku setiap pagi. Selain enak, katanya
-                juga bagus buat kesehatan karena antioksidannya tinggi."
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do"
               </p>
               <div class="review-author">
-                <span class="author-name">Citra M.</span>
+                <span class="author-name">Lorem</span>
                 <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
               </div>
             </div>
@@ -267,11 +262,30 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer-links">
-        <a href="#products">Produk</a>
-        <a href="#benefits">Manfaat</a>
-        <a href="#review">Review</a>
-        <a href="#pesan">Pesan</a>
+      <div class="footer-content">
+        <div class="footer-links">
+          <a href="#products">Produk</a>
+          <a href="#benefits">Manfaat</a>
+          <a href="#review">Review</a>
+          <!-- <a href="#pesan">Pesan</a> -->
+        </div>
+        <div class="social-links">
+          <a
+            href="https://instagram.com/sapphirelatte_"
+            target="_blank"
+            class="social-link"
+          >
+            <i class="fab fa-instagram"></i>
+          </a>
+
+          <!-- <a
+              href="https://tiktok.com/@sapphirelatte"
+              target="_blank"
+              class="social-link"
+            >
+              <i class="fab fa-tiktok"></i> TikTok
+            </a> -->
+        </div>
       </div>
     </footer>
     <script src="script.js"></script>
