minor update on hero-description

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div class="discount-tag">DISKON 17%</div>
           </div>
           <p class="hero-description">
-            Fresh Coffee from local farmer blended with high quality Butterfly
-            Pea Flower with high antioxidant quality of welcome
+            Kopi segar berpadu dengan bunga telang premium, kaya antioksidan, 
+            rasanya nikmat sekaligus bikin hidup lebih balance.
           </p>
           <!-- <div class="hero-actions">
           <button class="see-variants">See all variants →</button>
