product-desc change

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
           <h3 class="product-name">ORIGINAL</h3>
           <p class="product-size">16 FL OZ</p>
-          <p class="product-desc">Fresh Sapphire Latte with local farmer</p>
+          <p class="product-desc">Sensasi kopi, susu, dan telang. Kombinasi beda, bikin ketagihan.</p>
           <div class="product-footer">
             <div class="price-container">
               <div class="original-price">Rp18.000</div>
