adding new reviews

--- a/index.html
+++ b/index.html
@@ -190,11 +190,10 @@
             </div>
             <div class="review-content">
               <p class="review-text">
-                "Belum dapet kalimat reviewnya guys, bentar lagi kalo dapet tek
-                taruh sini"
+                "Akhirnya nemu kopi yang cantik dan enak! Warnanya eye-catching, bikin mood langsung naik. Ini latte paling unik yang pernah aku cobain."
               </p>
               <div class="review-author">
-                <span class="author-name">Lorem</span>
+                <span class="author-name">Gresa</span>
                 <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
               </div>
             </div>
@@ -218,15 +217,14 @@
 
           <div class="review-card">
             <div class="review-avatar">
-              <img src="img/Review3.jpg" alt="Avatar" class="avatar-img" />
+              <img src="img/Review4.jpg" alt="Avatar" class="avatar-img" />
             </div>
             <div class="review-content">
               <p class="review-text">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do"
+                "Baru pertama kali coba kopi campur bunga telang, kirain bakal aneh, tapi ternyata lembut dan creamy banget. Rasanya unik tapi tetep enak."
               </p>
               <div class="review-author">
-                <span class="author-name">Lorem</span>
+                <span class="author-name">Agatha</span>
                 <!-- <div class="review-rating">⭐⭐⭐⭐⭐</div> -->
               </div>
             </div>
